--- a/.github/workflows/status.yml
+++ b/.github/workflows/status.yml
@@ -4,8 +4,8 @@ on:
   schedule:
     - cron: '*/5 * * * *'
   push:
-    paths:
-      - 'status.cfg'
+    branches:
+      - 'master'
   workflow_dispatch:
 
 concurrency:
